Minimal changes for build using Java 9